--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
+    "recharts": "^2.8.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
